Enforce Google Java Style via Checkstyle in CI (#390)
Align the full Java tree with Google Java Style and fail local
commits and CI when style drifts, cutting review rework on merges.

References:
- [Google Java Style Guide](https://google.github.io/styleguide/javaguide.html)
- [Checkstyle Google checks](https://checkstyle.sourceforge.io/google_checks.html)
- [Gradle Checkstyle Plugin](https://docs.gradle.org/current/userguide/checkstyle_plugin.html)
- [google-java-format](https://github.com/google/google-java-format)
- [Husky](https://typicode.github.io/husky/)

Jira: https://felixzhu.atlassian.net/browse/EXP-354

Co-authored-by: Cursor <cursoragent@cursor.com>